pod_security_admission/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/Enforce: privileged
  name: test
