pod_security_admission/root-pod-exempted.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: root-pod-exempted
spec:
  containers:
  - image: nginx:1.23.1-alpine
    name: nginx
    securityContext:
        runAsNonRoot: false
        seccompProfile:
            type: RuntimeDefault
        allowPrivilegeEscalation: false
        capabilities:
            drop:
                - ALL
  dnsPolicy: ClusterFirst
  restartPolicy: Always
